--- a/Sign In/index.html
+++ b/Sign In/index.html
@@ -16,7 +16,7 @@
         </header>
         
    <div class="form-wrapper">
-    <h2>Create Your Account</h2>
+    <h2>Login to Your Account</h2>
     <p>Join the movement for a cleaner, greener home. Get your Starter Kit today!</p>
 
     <form id="signupform">
@@ -52,7 +52,7 @@
     </div>
 
     <p class="switch-auth">
-        Don't have an account? <a href="../Sign In/index.html">Sign Up</a>
+        Don't have an account? <a href="../Sign Up/index.html">Sign Up</a>
         <img src="../Projekt Dashboard/index.html" alt="">
     </p>
 </div>
