--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="hero-text-content">
                     <h1>Join Our <br> Recycle Program</h1>
                     <p>Be a part of the solution! Our comprehensive program makes recycling easy and impactful, turning waste into resources for a sustainable future. Together, we can make a difference.</p>
-                    <a href="#newsletter" class="eco-button primary-btn">Register Now</a>
+                    <a href="#newsletter" class="eco-button primary-btn">Subscribe Now</a>
                     <div class="account-links">
                         <a href="/Sign Up/index.html"><i class="fas fa-user-plus"></i> Create Account</a>
                         <a href="/Sign In/index.html"><i class="fas fa-sign-in-alt"></i> Sign In</a>
