--- a/Projekt Dashboard/index.html
+++ b/Projekt Dashboard/index.html
@@ -18,7 +18,6 @@
         <li><a href="#" data-page="metrics"><i class="fas fa-chart-line"></i></a></li>
         <li><a href="#" data-page="tracker"><i class="fas fa-recycle"></i></a></li>
         <li><a href="#" data-page="settings"><i class="fas fa-cog"></i></a></li>
-         <button class="signout" onclick="signout()"><a href="#" data-page="logout"><i class="fas fa-sign-out-alt"></i></a></button>
     </ul>
 </nav>
     </div>
@@ -40,7 +39,7 @@
             </div>
     </div>
 </body>
-<script type="module">
+<!-- <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
   import { getAuth, onAuthStateChanged, signOut} from "https://www.gstatic.com/firebasejs/12.6.0/firebase-auth.js";
  
@@ -84,7 +83,7 @@ signOut(auth).then(() => {
 });
 }
 window.signout = signout;
-</script>
+</script> -->
 <script src="script.js" type="module">
 </script>
 </html>
