--- a/Projekt Dashboard/index.html
+++ b/Projekt Dashboard/index.html
@@ -27,8 +27,8 @@
             <h2>RecycleOn</h2>
             <div class="top-stats-group">
                 <span data-stat="members"><i class="fas fa-user-friends"></i> 3259 Members</span>
-                <span data-stat="co2"><i class="fas fa-cloud-sun"></i> 500g CO2 saved</span>
-                <span data-stat="containers"><i class="fas fa-box"></i> 3259 Containers</span>
+                <span data-stat="co2"><i class="fas fa-cloud-sun"></i> Over 500kg CO2 saved globally</span>
+                <span data-stat="containers"><i class="fas fa-box"></i> 32,000 Containers Worldwide</span>
             </div>
             <div id="userprofile" class="userprofile">
                 
@@ -86,4 +86,5 @@ window.signout = signout;
 </script> -->
 <script src="script.js" type="module">
 </script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </html>
