--- a/Sign Up/index.html
+++ b/Sign Up/index.html
@@ -34,9 +34,10 @@
         <div class="input-group">
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required>
-            <small>Must be at least 8 characters long.</small>
+            <small id="y">Must be at least 6 characters long.</small>
+            <small class="reject" id="z">Your password is too short!</small>
         </div>
-        <button type="submit" id="signUpButton" class="cta-button primary-cta">Sign Up Now</button>
+        <button type="submit" id="signUpButton" onclick="regexauth()" class="cta-button primary-cta">Sign Up Now</button>
     </form>
     
     <div class="divider" id="go">OR</div>
@@ -49,13 +50,15 @@
 </svg>
         </button>
         
-        <!-- <button onclick="githubSignIn()" class="cta-button secondary-cta github-btn">
-            Sign Up with GitHub
-        </button> -->
-           <button onclick="FBSignIn()" class="cta-button secondary-cta Fb-btn">
+                <button onclick="githubSignIn()" class="cta-button secondary-cta github-btn">
+             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+  <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+</svg>
+        </button>
+           <!-- <button onclick="FBSignIn()" class="cta-button secondary-cta Fb-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
   <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
-</svg>
+</svg> -->
         </button>
           <button  onclick="XSignIn()" class="cta-button secondary-cta X-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
@@ -94,6 +97,22 @@
   const auth = getAuth(app);
   const provider = new GoogleAuthProvider();
 const SecondaryProvider = new TwitterAuthProvider();
+
+const regexauth = () => {
+const passwordInput = document.getElementById('password');
+const password = passwordInput.value;
+
+const minLengthRegex = /^.{6,}$/; 
+
+if (minLengthRegex.test(password)) {
+  createUserWithEmailAndPassword(email, password);
+} else {
+    console.error("Password must be at least 6 characters long.");
+    z.style.display = 'block';
+    y.style.display = 'none';
+    z.style.color = 'red';
+}
+}
 
   const googleSignIn = () => {
     signupform.style.display = 'none';
@@ -135,26 +154,26 @@ const XSignIn = () => {
       window.location.href = 'index.html'; 
     });
 };
-//    const githubSignIn = () => {
-//     signupform.style.display = 'none';
-//   signInWithPopup(auth, provider)
-//     .then((result) => {
-//       const user = result.user;
-//       console.log(user);
-//       if (user) {
-//         setTimeout(() => {
-//           window.location.href = "../../Projekt Dashboard/index.html";
-//         }, 1000);
-//       } else {
-//         window.location.href = 'index.html'; 
-//       }
-//     })
-//     .catch((error) => {
-//       const errorCode = error.code;
-//        console.log(errorCode);
-//       window.location.href = 'index.html'; 
-//     });
-// };
+   const githubSignIn = () => {
+    signupform.style.display = 'none';
+  signInWithPopup(auth, provider)
+    .then((result) => {
+      const user = result.user;
+      console.log(user);
+      if (user) {
+        setTimeout(() => {
+          window.location.href = "../../Projekt Dashboard/index.html";
+        }, 1000);
+      } else {
+        window.location.href = 'index.html'; 
+      }
+    })
+    .catch((error) => {
+      const errorCode = error.code;
+       console.log(errorCode);
+      window.location.href = 'index.html'; 
+    });
+};
 const EmailSignIn = (email, password) => {
     createUserWithEmailAndPassword(auth, email, password)
     .then((result) => {
@@ -178,10 +197,10 @@ const EmailSignIn = (email, password) => {
     go.style.display = 'block';
     };
   window.googleSignIn = googleSignIn;
-  // window.githubSignIn = githubSignIn;
+  window.githubSignIn = githubSignIn;
   window.EmailSignIn = EmailSignIn;
   window.XSignIn = XSignIn;
-
+  window.regexauth = regexauth;
 const signUpForm = document.getElementById('signupform');
 
 signUpForm.addEventListener('submit', (event) => {
