--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             </div>
         </div>
     </footer>
-
 </body>
+<script src="https://unpkg.com/scrollreveal"></script>
+<script src="script.js"></script>
 </html>
