--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             <div class="footer-col">
                 <h4>Connect With Us</h4>
                 <ul>
-                    <li><a href="#"><i class="fas fa-envelope"></i> info@cleanstart.com</a></li>
-                    <li><a href="#"><i class="fas fa-phone"></i> +1 (123) 456-7890</a></li>
+                    <li><a href="#"><i class="fas fa-envelope"></i> aquiiontop@gmail.com</a></li>
+                    <li><a href="#"><i class="fas fa-phone"></i> +234 814 690 3439</a></li>
                     <li><a href="#"><i class="fas fa-map-marker-alt"></i> 123 Eco Lane, Green City</a></li>
                 </ul>
             </div>
