--- a/Sign In/index.html
+++ b/Sign In/index.html
@@ -132,7 +132,7 @@
   const auth = getAuth(app);
   const provider = new GoogleAuthProvider();
   const SecondaryProvider = new TwitterAuthProvider();
-
+const tertProvider = new GithubAuthProvider();
   const regexauth = () => {
 const passwordInput = document.getElementById('password');
 const password = passwordInput.value;
@@ -168,7 +168,7 @@ if (minLengthRegex.test(password)) {
     });
 };
    const githubSignIn = () => {
-  signInWithPopup(auth, provider)
+  signInWithPopup(auth, tertProvider)
     .then((result) => {
       const user = result.user;
       console.log(user);
